force-app/main/default/objects/Village_Presence_Contact_Role__c/Village_Presence_Contact_Role__c.object-meta.xml
<CustomObject>
    <label>Village Presence Contact Role</label>
    <nameField>
        <displayFormat>VPC-{00000}</displayFormat>
        <label>Village Presence Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Village Presence Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>