force-app/main/default/objects/Village_Presence_Contact_Role__c/fields/BP_HFS_Brand_TeC_Conf_Date__c.field-meta.xml
<CustomField>
    <fullName>BP_HFS_Brand_TeC_Conf_Date__c</fullName>
    <description>Timestamp for HFS Brand T&amp;Cs user´s confirmation</description>
    <label>HFS Brand T&amp;Cs Confirmation</label>
    <type>DateTime</type>
</CustomField>