force-app/main/default/objects/Village_Presence_Contact_Role__c/fields/Certification_Active__c.field-meta.xml
<CustomField>
    <fullName>Certification_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is selected if the Village Presence Contact is authorised to certify sales within the Brand Portal</inlineHelpText>
    <label>Certification Active</label>
    <type>Checkbox</type>
</CustomField>