force-app/main/default/objects/Village_Presence_Contact_Role__c/fields/Confirm_Daily_Sales_Records__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Daily_Sales_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can the contact, for this store, confirm Daily Sales Records</inlineHelpText>
    <label>Confirm Daily Sales Records</label>
    <type>Checkbox</type>
</CustomField>