force-app/main/default/objects/Village_Presence_Contact_Role__c/fields/Contact_Active__c.field-meta.xml
<CustomField>
    <fullName>Contact_Active__c</fullName>
    <formula>Contact__r.Brand_Portal_User__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Active</label>
    <type>Checkbox</type>
</CustomField>