force-app/main/default/objects/Village_Presence_Contact_Role__c/fields/Daily_Sales_Active_From__c.field-meta.xml
<CustomField>
    <fullName>Daily_Sales_Active_From__c</fullName>
    <inlineHelpText>Enter the date for which the user should be able to see daily sales records</inlineHelpText>
    <label>Daily Sales Active From</label>
    <type>Date</type>
</CustomField>