force-app/main/default/objects/Village_Presence_Contact_Role__c/fields/Daily_Sales_Active_To__c.field-meta.xml
<CustomField>
    <fullName>Daily_Sales_Active_To__c</fullName>
    <inlineHelpText>Enter the date for which the user should no longer be able to see daily sales records.  If this field is left empty then the user will be able to see the daily sales records indefinitely unless the user is deactivated.</inlineHelpText>
    <label>Daily Sales Active To</label>
    <type>Date</type>
</CustomField>