force-app/main/default/objects/Village_Presence_Contact_Role__c/fields/Primary_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box if the contact&apos;s role is the primary one for this Village Presence</inlineHelpText>
    <label>Primary Contact Role</label>
    <type>Checkbox</type>
</CustomField>