force-app/main/default/objects/Village_Presence_Contact_Role__c/fields/Receive_Retail_LIVE__c.field-meta.xml
<CustomField>
    <fullName>Receive_Retail_LIVE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether contact should receive Retail LIVE updates created against this Village Presence.</description>
    <inlineHelpText>Indicates whether contact should receive Retail LIVE updates created against this Village Presence.</inlineHelpText>
    <label>Receive Retail LIVE</label>
    <type>Checkbox</type>
</CustomField>