force-app/main/default/objects/Village_Presence_Contact_Role__c/fields/Role_matches_brand__c.field-meta.xml
<CustomField>
    <fullName>Role_matches_brand__c</fullName>
    <formula>IF(  Contact__r.AccountId =  Village_Presence__r.Brand__r.Id ,&quot;Yes&quot;, 
 
&quot;No&quot;)</formula>
    <inlineHelpText>Does the Contact&apos;s Brand match the Village Presence&apos;s Brand</inlineHelpText>
    <label>Role matches brand</label>
    <type>Text</type>
</CustomField>