force-app/main/default/objects/Village_Presence_Contact_Role__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>keeps the record unique</description>
    <label>UniqueKey</label>
    <length>55</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>