force-app/main/default/objects/Village_Presence_Contact_Role__c/fields/Village_Presence__c.field-meta.xml
<CustomField>
    <fullName>Village_Presence__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Village Presence</label>
    <referenceTo>Village_Presence__c</referenceTo>
    <relationshipLabel>Village Presence Contact Roles</relationshipLabel>
    <relationshipName>Village_Presence_Contact_Roles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>