force-app/main/default/objects/Village_Presence_Contact_Role__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Village_Presence__c</columns>
    <columns>Retail_Role__c</columns>
    <columns>Primary_Contact_Role__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>